--- a/xflr5/xflr5-gui/scripts.qrc
+++ b/xflr5/xflr5-gui/scripts.qrc
@@ -1,5 +1,5 @@
 <RCC>
     <qresource prefix="/">
-        <file>script/example_script.xml</file>
+        <file>script/foil_script.xml</file>
     </qresource>
 </RCC>
