--- a/xflr5/xflr5v6/xfl3d/shaders.qrc
+++ b/xflr5/xflr5v6/xfl3d/shaders.qrc
@@ -1,20 +1,20 @@
 <RCC>
     <qresource prefix="/">
-        <file>shaders/gradient_fragmentshader.glsl</file>
-        <file>shaders/gradient_vertexshader.glsl</file>
-        <file>shaders/line_fragmentshader.glsl</file>
-        <file>shaders/line_vertexshader.glsl</file>
-        <file>shaders/texture_fragmentshader.glsl</file>
-        <file>shaders/texture_vertexshader.glsl</file>
-        <file>shaders/gradient_fragmentshader_120.glsl</file>
-        <file>shaders/gradient_vertexshader_120.glsl</file>
-        <file>shaders/line_fragmentshader_120.glsl</file>
-        <file>shaders/line_vertexshader_120.glsl</file>
-        <file>shaders/texture_fragmentshader_120.glsl</file>
-        <file>shaders/texture_vertexshader_120.glsl</file>
-        <file>shaders/surface_fragmentshader_120.glsl</file>
-        <file>shaders/surface_vertexshader_120.glsl</file>
-        <file>shaders/surface_fragmentshader.glsl</file>
-        <file>shaders/surface_vertexshader.glsl</file>
+        <file>shaders/gradient/gradient_FS.glsl</file>
+        <file>shaders/gradient/gradient_FS_120.glsl</file>
+        <file>shaders/gradient/gradient_VS.glsl</file>
+        <file>shaders/gradient/gradient_VS_120.glsl</file>
+        <file>shaders/texture/texture_FS.glsl</file>
+        <file>shaders/texture/texture_FS_120.glsl</file>
+        <file>shaders/texture/texture_VS.glsl</file>
+        <file>shaders/texture/texture_VS_120.glsl</file>
+        <file>shaders/line/line_FS.glsl</file>
+        <file>shaders/line/line_FS_120.glsl</file>
+        <file>shaders/line/line_VS.glsl</file>
+        <file>shaders/line/line_VS_120.glsl</file>
+        <file>shaders/surface/surface_FS.glsl</file>
+        <file>shaders/surface/surface_FS_120.glsl</file>
+        <file>shaders/surface/surface_VS.glsl</file>
+        <file>shaders/surface/surface_VS_120.glsl</file>
     </qresource>
 </RCC>
