fixes for translation files

--- a/xflr5/xflr5v6/xfl3d/shaders.qrc
+++ b/xflr5/xflr5v6/xfl3d/shaders.qrc
@@ -16,5 +16,7 @@
         <file>resources/shaders/point/point_FS.glsl</file>
         <file>resources/shaders/point/point_GS.glsl</file>
         <file>resources/shaders/point/point_VS.glsl</file>
+        <file>resources/shaders/newton/newton_FS.glsl</file>
+        <file>resources/shaders/newton/newton_VS.glsl</file>
     </qresource>
 </RCC>
