--- a/xflr5/xflr5v6/xfl3d/resources/shaders.qrc
+++ b/xflr5/xflr5v6/xfl3d/resources/shaders.qrc
@@ -12,6 +12,8 @@
         <file>shaders/point/point_FS.glsl</file>
         <file>shaders/point/point_GS.glsl</file>
         <file>shaders/point/point_VS.glsl</file>
+        <file>shaders/point2/point2_FS.glsl</file>
+        <file>shaders/point2/point2_VS.glsl</file>
         <file>shaders/shadow/depth_FS.glsl</file>
         <file>shaders/shadow/depth_VS.glsl</file>
         <file>shaders/surface/surface_FS.glsl</file>
